# degenbets

./: .env.example  .gitignore  Anchor.toml  package-lock.json  package.json
app/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
app/.vercel/output/: builds.json
app/public/: _redirects  _worker.js  manifest.json  sw.js
app/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/hooks/: useBuy.ts  useClaimCreatorFee.ts  useClaimWinnings.ts  useCreateMarket.ts  useCreatorProfile.ts  useDealer.ts  useMarket.ts  useMarkets.ts  usePlaceBet.ts  usePositions.ts  useSell.ts  useSellPosition.ts  useSwipeGesture.ts  useSwipeMarkets.ts
app/src/lib/: constants.ts  program.ts  types.ts
backend/: .env.example  package-lock.json  package.json  start-dev.ts
backend/src/: index.ts
backend/src/agent/: dealer.ts
backend/src/db/: migrate.ts  pool.ts  schema.sql
backend/src/routes/: creators.ts  leaderboard.ts  markets.ts  sync.ts  trades.ts  users.ts
programs/degenbets/: Cargo.toml
programs/degenbets/src/: errors.rs  events.rs  lib.rs  math.rs  state.rs
programs/degenbets/src/instructions/: buy.rs  claim_creator_fee.rs  claim_refund.rs  claim_treasury_fee.rs  claim_winnings.rs  close_market.rs  close_position.rs  create_market.rs  initialize.rs  mod.rs  place_bet.rs  reclaim_stale_market.rs  resolve_market.rs  sell.rs  sell_position.rs  toggle_pause.rs  transfer_authority.rs  update_config.rs  update_fee.rs  void_market.rs
scripts/: create-markets.ts  init-devnet.ts  update-fees.ts
tests/: degenbets.ts
(+49 files in other folders)
